@@ -1,3 +1,13 @@
+2010-08-31  Zhenyao Mo  <zmo@google.com>
+
+        Reviewed by Kenneth Russell.
+
+        gl-teximage.html and tex-image-and-sub-image-2d-with-image.html failed on Chromium Mac bots (10.5)
+        https://bugs.webkit.org/show_bug.cgi?id=44993
+
+        * platform/graphics/cg/GraphicsContext3DCG.cpp:
+        (WebCore::GraphicsContext3D::getImageData): Take into consideration the source image pixel row alignment.
+
 2010-08-31  Patrick Gansterer  <paroga@paroga.com>
 
         Reviewed by Kenneth Rohde Christiansen.
